# jaxmat

./: .buildinfo  .gitignore  CITATION.cff  README.md  computational.html  concepts.html  genindex.html  hardening_plasticity_data.npz  identification.html  index.html  ml_models.html  objects.inv  pheno_models.html  py-modindex.html  pyproject.toml  pytrees.html  search.html  searchindex.js  sharp_bits.html  tensors.html
_downloads/cc81594d3e763f99bc7159ffac8729d4/: generate_performance_data.py
_modules/: index (conflicted copy 2026-01-28 135249).html  index.html  jaxmat.html
_modules/jaxmat/: loader.html  state.html  tensors.html
_sources/: index.md
_sources/api/: jaxmat.rst  jaxmat.tensors.rst  jaxmat.tensors.symmetry_classes.rst
api/: jaxmat.html  jaxmat.loader.html  jaxmat.materials.behavior.html  jaxmat.materials.elasticity.html  jaxmat.materials.elastoplasticity.html  jaxmat.materials.fe_fp_elastoplasticity.html  jaxmat.materials.generalized_standard.html  jaxmat.materials.html  jaxmat.materials.hyperelasticity.html  jaxmat.materials.plastic_surfaces.html  jaxmat.materials.viscoelasticity.html  jaxmat.materials.viscoplastic_flows.html  jaxmat.materials.viscoplasticity.html  jaxmat.solvers.custom_newton.html  jaxmat.solvers.custom_optimistix_solvers.html  jaxmat.solvers.html  jaxmat.state.html  jaxmat.tensors.generic_tensors.html  jaxmat.tensors.html  jaxmat.tensors.linear_algebra.html  jaxmat.tensors.mappings.html  jaxmat.tensors.symmetry_classes.html  jaxmat.tensors.tensor_utils.html  jaxmat.tensors.utils.html
demos/identification/: hardening_rule.html  hardening_rule.py  nonlinear_kinematic_hardening (conflicted copy 2026-02-05 113505).html  nonlinear_kinematic_hardening.html  nonlinear_kinematic_hardening.py  training.csv
demos/neural_network_models/: hyperelastic_PANN.html  hyperelastic_PANN.py  neural_GSM.html  neural_GSM.py
demos/phenomenological_models/: CamClay.html  CamClay.py  Green_viscoplasticity.html  Green_viscoplasticity.py  cam_clay.html  cam_clay.py  green_viscoplasticity.html  green_viscoplasticity.py  multisurface_plasticity.html  multisurface_plasticity.py
demos/quickstart/: batched_computation.html  batched_computation.py  generate_performance_data.py  getting_started.html  getting_started.py  material_parameters_batching.html  material_parameters_batching.py  performance.html  performance.py  tensors.html  tensors.md  tensors.py
docs/: _config.yml  _toc.yml  computational.md  concepts.md  index.md  pytrees.md  sharp_bits.md  tensors.md
docs/api/: jaxmat.tensors.mappings.rst  jaxmat.tensors.rst  jaxmat.tensors.symmetry_classes.rst
jaxmat/: __init__.py  loader.py  state.py  utils.py
jaxmat/materials/: __init__.py  behavior.py  elasticity.py  elastoplasticity.py  fe_fp_elastoplasticity.py  generalized_standard.py  hyperelasticity.py  plastic_surfaces.py  porosity.py  viscoelasticity.py  viscoplastic_flows.py  viscoplasticity.py
jaxmat/nn/: icnn.py
jaxmat/solvers/: __init__.py  custom_newton.py  custom_optimistix_solvers.py
jaxmat/tensors/: __init__.py  generic_tensors.py  linear_algebra.py  mappings.py  rotation.py  symmetry_classes.py  tensor_utils.py  utils.py
tests/: test_behaviors.py  test_loader.py  test_serialization.py  test_state.py  thermo_mechanical_behavior.py
tests/tensors/: test_tensors.py  (+4 more)
(+43 files in other folders)
