[project]
name = "jaxmat"
version = "0.0.3"
description = "Automated material constitutive modeling in JAX"
readme = "README.md"
authors = [
    { name = "Jeremy Bleyer", email = "jeremy.bleyer@enpc.fr" },
    { name = "Paul Bouteiller", email = "paul.bouteiller@cea.fr" },
    { name = "Jack S. Hale", email = "jack.hale@uni.lu" }
]
license = { text = "LGPL-3.0" }
keywords = ["material science", "machine learning", "material modeling", "solid mechanics", "automatic differentiation"]
requires-python = ">=3.11"
dependencies = [
    "jax>=0.6.1",
    "optax",
    "equinox",
    "optimistix",
    "lineax"
]
[project.urls]
Homepage = "https://erc-automatix.github.io/jaxmat/"
Repository = "https://github.com/erc-automatix/jaxmat"
Documentation = "https://erc-automatix.github.io/jaxmat/"

[project.optional-dependencies]
docs = [
    "jupytext",
    "jupyter_book<2",
    "sphinx_autodoc_typehints",
    "sphinx_math_dollar"
]
gpu = [
    "jax[cuda12]>=0.6.1",
]
optional = [
    "diffrax",
]
tests = [
    "matplotlib",
    "pytest",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["jaxmat*", "demos*", "tests*"]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
#      "D",      # pydocstyle
      "E",      # pycodestyle
      "W",      # pycodestyle
      "F",      # pyflakes
      "I",      # isort - use standalone isort
      "RUF",    # Ruff-specific rules
      "UP",     # pyupgrade
      "ICN",    # flake8-import-conventions
      "NPY",    # numpy-specific rules
      "FLY",    # use f-string not static joins
      "NPY201", # numpy 2.x ruleset
]
